# hpc-project

./: .gitignore  CMakeLists.txt  Makefile  bmp.cc  config.hh  main.cc  math.hh  opencl_utils.cc  opencl_utils.cpp  opencl_utils.h  opencl_utils.hh  path_tracer.cl  path_tracer.hh  ray_query.hh  scene.cc
